# ardu-gz_uasc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gazebo-iris-gimbal.parm
models/gcp_large/: model.config  model.sdf
models/gcp_large_0/: model.config  model.sdf
models/gcp_large_1/: model.config  model.sdf
models/gcp_large_2/: model.config  model.sdf
models/gcp_large_3/: model.config  model.sdf
models/gcp_large_4/: model.config  model.sdf
models/gcp_large_5/: model.config  model.sdf
models/gcp_large_6/: model.config  model.sdf
models/gcp_large_7/: model.config  model.sdf
models/gcp_large_8/: model.config  model.sdf
models/gcp_large_9/: model.config  model.sdf
models/gcp_small_0/: model.config  model.sdf
models/gcp_small_1/: model.config  model.sdf
models/gcp_small_2/: model.config  model.sdf
models/gcp_small_3/: model.config  model.sdf
models/gcp_small_4/: model.config  model.sdf
models/gcp_small_5/: model.config  model.sdf
models/gcp_small_6/: model.config  model.sdf
models/gcp_small_7/: model.config  model.sdf
models/gcp_small_8/: model.config  model.sdf
models/gcp_small_9/: model.config  model.sdf
models/gimbal_small_3d/: model.sdf
models/models/gcp_0/: model.config  model.sdf
models/models/gcp_1/: model.config  model.sdf
models/models/gcp_2/: model.config  model.sdf
models/models/gcp_3/: model.config  model.sdf
models/models/gcp_4/: model.config  model.sdf
models/models/gcp_5/: model.config  model.sdf
models/models/gcp_6/: model.config  model.sdf
models/models/gcp_7/: model.config  model.sdf
models/models/gcp_8/: model.config  model.sdf
models/models/gcp_9/: model.config  model.sdf
models/scripts/: generate_gcps.py
models/scripts/models/gcp_0/: model.config  model.sdf
models/scripts/models/gcp_1/: model.config  model.sdf
models/scripts/models/gcp_2/: model.config  model.sdf
models/scripts/models/gcp_3/: model.config  model.sdf
models/scripts/models/gcp_4/: model.config  model.sdf
models/scripts/models/gcp_5/: model.config  model.sdf
models/scripts/models/gcp_6/: model.config  model.sdf
models/scripts/models/gcp_7/: model.config  model.sdf
models/scripts/models/gcp_8/: model.config  model.sdf
models/scripts/models/gcp_9/: model.config  model.sdf
src/: GCPSpawner.cc  GCPSpawnerTest.cc
worlds/: iris_runway.sdf
